# prost-simple-rpc

./: Cargo.toml  README.md
example/: Cargo.toml  build.rs
example/src/: main.rs
example/src/schema/: mod.rs
example/src/schema/echo/: mod.rs  service.proto
example/src/schema/greeting/: mod.rs  service.proto
src/: __rt.rs  descriptor.rs  error.rs  handler.rs  lib.rs
