[package]
authors = ["David Flemström <david.flemstrom@gmail.com>"]
name = "prost-simple-rpc"
description = "A simple RPC implementation on top of prost"
license = "MIT"
repository = "https://github.com/dflemstr/prost-simple-rpc"
version = "0.1.6-alpha.0"

[dependencies]
bytes = "0.4.6"
failure = "0.1.1"
failure_derive = "0.1.1"
futures = "0.1.20"
prost = "0.3.2"

[dependencies.clippy]
optional = true
version = "0.0.191"

[workspace]
members = ["build", "example"]

[features]
default = []
dev = ["clippy"]
