[package]
authors = ["David Flemström <david.flemstrom@gmail.com>"]
name = "prost-simple-rpc-example"
publish = false
version = "0.1.0"

[build-dependencies]
prost-build = "0.4.0"

[build-dependencies.prost-simple-rpc-build]
path = "../build"

[dependencies]
bytes = "0.4.9"
failure = "0.1.2"
failure_derive = "0.1.2"
futures = "0.1.23"
prost = "0.4.0"
prost-derive = "0.4.0"
tokio = "0.1.7"

[dependencies.prost-simple-rpc]
path = ".."
